@@ -1,6 +1,7 @@
 use super::*;
 use serde::de::DeserializeSeed;
 
+mod cmp_value;
 mod parse_array_object;
 mod parse_nested_object;
 mod parse_simple;
