@@ -1,4 +1,5 @@
 use super::*;
+use serde_json::Value;
 
 /// ## Deserialized JSON Value
 ///
@@ -15,6 +16,37 @@ pub enum MessyJsonValue<'a> {
     Obj(BTreeMap<Cow<'a, str>, MessyJsonValue<'a>>),
     String(Cow<'a, str>),
     Null,
+}
+
+impl<'a> PartialEq<Value> for MessyJsonValue<'a> {
+    fn eq(&self, other: &Value) -> bool {
+        match (self, other) {
+            (MessyJsonValue::Array(mj_arr), Value::Array(v_arr)) => mj_arr == v_arr,
+            (MessyJsonValue::Bool(mj_bool), Value::Bool(v_bool)) => mj_bool == v_bool,
+            (MessyJsonValue::Number(mj_number), Value::Number(v_number)) => {
+                let num = match v_number.as_u64() {
+                    Some(x) => x,
+                    None => return false, // TODO Handle better
+                };
+                mj_number == &(num as u128)
+            }
+            (MessyJsonValue::Obj(mj_obj), Value::Object(v_obj)) => {
+                for (k, v) in mj_obj.iter() {
+                    if let Some(x) = v_obj.get(k.as_ref()) {
+                        if v != x {
+                            return false;
+                        }
+                        continue;
+                    }
+                    return false;
+                }
+                true
+            }
+            (MessyJsonValue::String(mj_str), Value::String(v_str)) => mj_str == v_str,
+            (MessyJsonValue::Null, Value::Null) => true,
+            _ => false,
+        }
+    }
 }
 
 /// ## Container for [MessyJsonValue](MessyJsonValue)
